# catalogue

./: .gitignore  AGENTS.md  API.md  APIv2.md  CONTRIBUTING.md  LICENSE  README.md  dev.ipynb  requirements.txt  validate.py
.agents/rules/: icons.md
.codex/: config.toml
.github/workflows/: deploy.yml  validate.yml
app/: README.md  package.json  svelte.config.js
app/static/: llms.txt
data/asset_translations/: arbitrum.json  avalanche.json  base.json  binance.json  binance.jsonl  bingx.json  bit2me.json  bitcoin.json  bitget.json  bitget.jsonl  bnb-chain.json  bnb_chain.json  bybit-eu.json  celo.json  coinbase.json  deribit.json  dydx.json  ethereum.json  hyperliquid.json  kraken.json  kraken.jsonl  kucoin.json  mexc.json  mexc.jsonl  optimism.json  polygon.json  scroll.json  solana.json  sonic.json  tron.json  venga.json  zksync.json
data/assets/: 1inch.json  aave-1inch.json  aave-aave.json  aave-chainlink.json  aave-curve-dao.json  aave-curve-usd.json  aave-dai.json  aave-ethena-usde.json  aave-ethereum-name-service.json  aave-ethereum.json  aave-euro-coin.json  aave-global-dollar.json  aave-lido-dao.json  aave-metamask-usd.json  aave-paypal-usd.json  aave-ripple-usd.json  aave-sky-usd.json  aave-synthetix.json  aave-tether.json  (+295 more)
docs/: external.md
js/: .eslintrc.cjs  Justfile  README.md  package.json  tsconfig.json
lib/: README.md  pyproject.toml
lib/src/catalogue/: __init__.py  load.py  schema.py  validate.py
lib/src/tribulnation/catalogue/: __init__.py  __init__.pyi  load.py  schema.py  validate.py
lib/src/tribulnation/catalogue/api/: api.py
lib/src/tribulnation/catalogue/api/schema/: __init__.py  assets.py  common.py  indexes.py  instruments.py  platforms.py  spam.py  stats.py
lib/src/tribulnation/catalogue/cli/: __init__.py  download.py
lib/src/tribulnation/catalogue/data/: __init__.py  load.py  main.py  schema.py  validate.py
lib/src/tribulnation/catalogue/market_data/: __init__.pyi  alphavantage.py  catalogue_pro.py  coingecko.py  coinmarketcap.py  fred.py  main.py  sdk.py  twelvedata.py  util.py  yahoo.py
lib/src/tribulnation/catalogue/prices/: __init__.pyi  alphavantage.py  coingecko.py  coinmarketcap.py  main.py  sdk.py  twelvedata.py
marketing/: copy.md  show-hn.md  twitter.md
scripts/: build_api.py  validate.py
skills/: CREATE_ASSET.md
(+119 files in other folders)
