[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-catalogue"
version = "0.1.8"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Central catalogue of (crypto-)assets, platforms and networks."
dependencies = [
  "pydantic",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/tribulnation/catalogue.git"

[project.optional-dependencies]
cli = ["typer"]
api = ["fastapi"]
prices = [
  "coingecko-sdk", "httpx", "tribulnation-sdk",
]

[project.scripts]
tn-catalogue = "tribulnation.catalogue.cli:app"
